0.33 To be released
    . Add ->activateTab() for setting the currently displayed tab
    . Now needs MozRepl::RemoteObject 0.13 as a prerequisite
    . Add activate => 1 option to constructor

0.32 20100810
    . Add WWW::Mechanize::Firefox::FAQ as a list of frequently asked
      questions. As people now actually ask questions, this file
      has a reason to exist.
    . Add WWW::Mechanize::Firefox::Troubleshooting as a document
      for things that still need to be implemented. Also list
      workarounds.
    . Add example for how to change Firefox settings.
    . Change code for closing a tab so it works dynamically
    . Add method ->closeTab for closing arbitrary tabs and a test for it
    . Add experimental ->content_utf8 method that always tries to decode
      the content.
    ! All HTTP::Response objects now use ->content_utf8() instead of
      expecting the content to be in utf8. This may break your
      encoding-sensitive code, so please send me test cases where it breaks
      for you.

0.31 20100713
    . ->get now supports the :local_file shortcut for local saving
    . WWW::Mechanize::Firefox::Cookbook contains snippets
    . Documentation is more unified, short examples of function usage

0.30 20100711
    . Add ->is_visible method to check for node visibility
    . Add ->wait_until_invisible method to wait until a node disappears
    . Add tests for the above
    . Added tail example program for tailing the Javascript console
    . Added example program to send messages from the console to the Javascript
      console (intended to delineate the start/stop of test runs)

0.29 20100704
    . Really fix bcat.pl and failing tests
    . Use Firefox XPath library for ->find_link( text_contains => ... )
    . Can't use Firefox XPath library for ->find_link( text_regex => ... )
      as Firefox does not seem to define fn:matches()
    . ->find_link() now really searches only the current frame, as Mechanize does

0.28 20100702