@@ -2073,20 +2073,24 @@ sub forms {
                      : \@res
 };
 
-=head2 C<< $mech->field $name, $value, [,\@pre_events [,\@post_events]] >>
+=head2 C<< $mech->field $selector, $value, [,\@pre_events [,\@post_events]] >>
 
   $mech->field( user => 'joe' );
   $mech->field( not_empty => '', [], [] ); # bypass JS validation
 
-Sets the field with the name to the given value.
+Sets the field with the name given in C<$selector> to the given value.
 Returns the value.
 
-Note that this uses the C<name> attribute of the HTML,
-not the C<id> attribute.
+The method understands very basic CSS selectors in the value for C<$selector>,
+like the L<HTML::Form> find_input() method.
 
-By passing the array reference C<PRE EVENTS>, you can indicate which
+A selector prefixed with '#' must match the id attribute of the input.
+A selector prefixed with '.' matches the class attribute. A selector
+prefixed with '^' or with no prefix matches the name attribute.
+
+By passing the array reference C<@pre_events>, you can indicate which
 Javascript events you want to be triggered before setting the value.
-C<POST EVENTS> contains the events you want to be triggered
+C<@post_events> contains the events you want to be triggered
 after setting the value.
 
 By default, the events set in the
@@ -2106,11 +2110,11 @@ sub field {
     );
 }
 
-=head2 C<< $mech->value( $name_or_element, [%options] ) >>
+=head2 C<< $mech->value( $selector_or_element, [%options] ) >>
 
     print $mech->value( 'user' );
 
-Returns the value of the field named C<NAME> or of the
+Returns the value of the field given by C<$selector_or_name> or of the
 DOM element passed in.
 
 The legacy form of
@@ -2154,6 +2158,14 @@ sub get_set_value {
     my ($self,%options) = @_;
     my @fields;
     my $name  = delete $options{ name };
+    my $attr = 'name';
+    if ($name =~ s/^[^]//) {
+        $attr = 'name'
+    } elsif ($name =~ s/^#//) {
+        $attr = 'id'
+    } elsif ($name =~ s/^\.//) {
+        $attr = 'class'
+    };
     my $set_value = exists $options{ value };
     my $value = delete $options{ value };
     my $pre   = delete $options{pre}  || $self->{pre_value};
@@ -2163,8 +2175,8 @@ sub get_set_value {
     } else {
         _default_limiter( single => \%options );
         @fields = $self->xpath(
-            sprintf( q{.//input[@name="%s"] | .//select[@name="%s"] | .//textarea[@name="%s"]}, 
-                                   $name,              $name,                 $name),
+            sprintf( q{.//input[@%s="%s"] | .//select[@%s="%s"] | .//textarea[@%s="%s"]}, 
+                               $attr,$name,          $attr,$name,          $attr,$name ),
             %options,
         );
     };
